--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
+    "next-qrcode": "^2.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-barcode": "^1.4.2",
+    "react-camera-qr": "^1.0.1",
+    "react-dom": "18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
     "eslint": "8.20.0",
