--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
+    "js-cookie": "^3.0.1",
     "next": "12.2.3",
     "next-qrcode": "^2.1.0",
     "react": "18.2.0",
     "react-barcode": "^1.4.2",
     "react-camera-qr": "^1.0.1",
     "react-dom": "18.2.0",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-qr-reader": "^3.0.0-beta-1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
